Fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ html, body {
 .logo {
     padding-top: 25px;
     padding-bottom: 25px;
-	margin-left: 50px;
+    margin-left: 50px;
     width: 190px;
 }
 
@@ -35,12 +35,17 @@ h3 {
 
 .glass {
     background-color: rgba(100, 250, 250, 0.6);
-	min-height: 400px;
+    min-height: 400px;
+}
+
+.container-fluid {
+    padding-right: 15px;
+    padding-left: 15px;
 }
 
 .section {
-    padding-right: 100px;
-	padding-left: 65px;
+    padding-right: 85px;
+    padding-left: 50px;
     padding-top: 15px;
     padding-bottom: 15px;
 }
@@ -60,8 +65,23 @@ h3 {
     font-size: 12px;
 }
 
-a, a:hover {
+a {
     color: inherit;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #333;
+    text-decoration: none;
+}
+a:link {
+    text-decoration: none;
+}
+a:visited {
+    text-decoration: none;
+}
+a:active {
+    text-decoration: none;
 }
 
 
